@@ -1,0 +1,9 @@
+Title: Icon selector: Fixed exception in case non images are saved in icon folder
+Level: 1
+Component: wato
+Compatible: compat
+Version: 1.2.8p15
+Date: 1480586351
+Class: fix
+
+
