@@ -17,6 +17,7 @@
     WATO:
     * 4077 FIX: Fixed "Request URI too long" when cloning role after editing another one
     * 4079 FIX: Improved error handling in case a WATO folder can not be written
+    * 4082 FIX: Icon selector: Fixed exception in case non images are saved in icon folder
 
     Event Console:
     * 4097 FIX: Event console: Make writing of status file more robust...
